fix : overflow hidden videos

--- a/wtv_interface/src/assets/style/style.less
+++ b/wtv_interface/src/assets/style/style.less
@@ -8,6 +8,7 @@
   background-clip: padding-box;
   height: 85%;
   background-position: center;
+  overflow: hidden;
 }
 .color-bg-sub{
   background-color: white;
